fix: fixed broken spacing in home screen when admin is logged in

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,12 +9,13 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   height: 70%;
 }
 
 footer {
+  position: relative;
   display: flex;
   width: 100%;
   margin-top: auto;
@@ -37,7 +38,15 @@ footer {
   height: 50vh;
   align-items: center;
   justify-content: space-around;
-  background-color: white;
+}
+
+.admincontent {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 30vh;
+  width: 50vw;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .welcome {
